# maeril

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/maeril/: __init__.py  cli.py  dump.py  patch.py  prompt.py
src/maeril/dump_files/: cli_with_logging.py  cookiecutter_pylibrary.json  dot_gitignore_c  dot_gitignore_latex  gitignore_python  prompt.md  pypackage_template.json  tex-fmt.toml
src/maeril/dump_files/.devcontainer/: Dockerfile  devcontainer.json
src/maeril/dump_files/devcontainer/: default_zsh_setup.zsh
src/maeril/dump_files/devcontainer_aws/: Dockerfile  devcontainer.json
src/maeril/dump_files/devcontainer_bibook/: Dockerfile  devcontainer.json
src/maeril/dump_files/devcontainer_debian/: Dockerfile  default_zsh_setup.zsh  devcontainer.json
src/maeril/dump_files/devcontainer_esp/: Dockerfile  devcontainer.json
src/maeril/dump_files/devcontainer_latex/: Dockerfile  Makefile  devcontainer.json
src/maeril/dump_files/dot_vscode/: launch.json
tests/: __init__.py  test_maeril.py
