[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maeril"
version = "0.1.0"
description = "Ensemble of Random Tools"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
  {name = "Michael Wagner"}
]
maintainers = [
  {name = "Michael Wagner"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "tiktoken",
  "clipman",
  "rich",
  "openai"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",      # linting
    "pytest",    # testing
    "ruff"       # linting
]

[project.urls]
bugs = "https://github.com/triveria/maeril/issues"
changelog = "https://github.com/triveria/maeril/blob/master/changelog.md"
homepage = "https://github.com/triveria/maeril"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy Configuration
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# Scripts
[project.scripts]
maeril = "maeril.cli:app"
